--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#2d4059" />
     <meta
       name="description"
-      content="GeoMed Health Analytics Platform"
+      content="EpiScope: A Real-Time Geo-Analytics Platform for Symptom and Disease Trend Analysis"
     />
-    <title>GeoMed Health Analytics</title>
+    <title>EpiScope | Disease Trend Analysis Platform</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
